--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 :root {
     --yellow: #FFD058;
     --green: #35BD7C;
+    --red: #EF6161;
     --dark-blue: #1F4A89;
     --ink: #121747;
     --grey: #c4c4c4;
+    --grey-2: #888888;
     --light-grey: #888888;
+    --light-blue-bg: #F5F7FF;
     --box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 @font-face {
@@ -22,6 +25,48 @@
     font-weight: bold;
 }
 
+/*Open Sans*/
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../fonts/OpenSans-Regular.ttf');
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url(../fonts/OpenSans-Italic.ttf);
+    font-style: italic;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url(../fonts/OpenSans-Bold.ttf);
+    font-weight: bold;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url(../fonts/OpenSans-BoldItalic.ttf);
+    font-weight: bold;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url(../fonts/OpenSans-SemiBold.ttf);
+    font-weight: 600;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url(../fonts/OpenSans-SemiBoldItalic.ttf);
+    font-weight: 600;
+    font-style: italic;
+}
+
+body, html, * {
+    font-family: Open Sans;
+    color: #333333;
+}
+a {
+    text-decoration: none;
+    color: unset;
+}
+
 .grid-md-3 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -29,9 +74,15 @@
 .text-green {
     color: var(--green);
 }
+.weight-600 {
+    font-weight: 600;
+}
 
 .product__item img {
+    float: left;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /*@font-face {
@@ -39,6 +90,11 @@
     src: url(../fonts/Montserrat-Medium.ttf);
     font-weight: 300;
 }*/
+
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+}
 .menu {
     background-color: transparent;
     margin-top: -5px;
@@ -108,6 +164,7 @@
     padding: 0 16px;
     background-color: transparent;
     border: none;
+    color: white;
 }
 
 .register-cart {
@@ -180,6 +237,9 @@
 }
 .product__item {
     box-shadow: var(--box-shadow);
+    background-color: white;
+    border-radius: 4px;
+    overflow: hidden;
 }
 .product__content {
     padding: 24px;
@@ -197,7 +257,7 @@
 .product__list .icon {
     display: inline-block;
 }
-.product__list .tour-info {
+.col-md-4.product__list .tour-info {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 10px;
@@ -206,6 +266,287 @@
 .product__list .nsy-icon {
     width: 24px;
     height: 24px;
+    margin-right: 8px;
+    vertical-align: middle;
+}
+.tour-info .info-item {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+}
+.tour-info .info-item .text {
+    display: inline-block;
+}
+
+.tour-info .info-item .font-smaller {
+    font-size: 14px;
+}
+.tour-button {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 16px;
+    margin-top: 24px;
+    margin-bottom: 8px;
+}
+
+.text-detail {
+    padding: 11px 9px;
+    color: var(--ink);
+    font-size: 13px;
+}
+.text-detail a {
+    color: var(--ink);
+    font-size: 13px;
+    text-decoration: underline;
+}
+
+.golden-gradient-button {
+    border-radius: 4px;
+    background: linear-gradient(130.3deg, #CBA054 -5.64%, #FFE381 104.06%);
+    color: var(--ink);
+    border: none;
+    padding: 11px 18px;
+    font-weight: 600;
+    line-height: 18px;
+    opacity: 1;
+    transition-duration: 0.2s;
+}
+.golden-gradient-button:hover {
+    opacity: 0.8;
+}
+.best-selling-tour .explore {
+    padding-bottom: 24px;
+}
+.explore a {
+    display: inline-block;
+    border: 1px solid var(--red);
+    color: var(--red);
+    background-color: transparent;
+    text-decoration: none;
+    padding: 21px 60px;
+    border-radius: 4px;
+    font-size: 16px;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    margin: 40px auto;
+    transition-duration: 0.5s;
+}
+.explore a:hover {
+    border: 1px solid var(--red);
+    color: var(--red);
+    box-shadow: var(--box-shadow);
+    text-decoration: none;
+}
+.best-selling-trip, .our-product-section {
+    background-color: var(--light-blue-bg);
+}
+.col-md-3.product-list .product__content {
+    padding: 16px 24px;
+}
+.col-md-3.product__list .product__image {
+    height: 160px;
+}
+.col-md-3.product__list .tour-info .info-item {
+    margin-bottom: 18px;
+}
+.col-md-3.product__list .tour-button button {
+    padding: 11px 5px;
+    font-size: 13px;
+    width: 100%;
+}
+.col-md-3.product__list .tour-button .text-detail {
+    padding: 11px 6px;
+}
+
+.quote-section {
+    background-size: cover;
+    background-position: center center;
+    text-align: center;
+    padding: 128px 20px;
+    color: white;
+}
+.home-quote {
+    background-image: url('../images/app/bg-sunset.png');
+}
+.quote-section .mini-intro {
+    line-height: 24px;
+    color: white;
+}
+.quote-section .quote {
+    font-style: italic;
+    font-size: 18px;
+    line-height: 32px;
+    font-weight: 600;
+    display: inline-flex;
+    margin-top: 16px;
+    color: white;
+}
+.quote-content {
+    color: white;
+}
+.open-quote, .close-quote {
+    width: 24px;
+    height: 100%;
+    background-image: url('../images/app/icon/ic_quote.svg');
+    background-repeat: no-repeat;
+}
+.close-quote {
+    transform: rotate(180deg);
+}
+.quote .quote-content {
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.group-carousel {
+/*    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 24px;*/
+    padding-bottom: 24px;
+}
+.feedback-section {
+    padding-bottom: 58px;
+}
+.page-tesmonial .group-carousel__item {
+    text-align: center;
+}
+.page-tesmonial .group-carousel__item-image img {
+    border-radius: 50%;
+/*    width: 144px;
+    height: 144px;*/
+}
+.group-carousel__item-title {
+    color: var(--ink);
+    font-weight: bold;
+    margin-top: 32px;
+    margin-bottom: 7px;
+}
+.group-carousel__item-dob {
+    color: var(--grey-2);
+    font-size: 14px;
+    line-height: 19px;
+    margin-bottom: 13px;
+}
+.group-carousel__item-intro {
+    font-size: 14px;
+    line-height: 24px;
+}
+.carousel-indicators li {
+    width: 12px !important;
+    height: 12px !important;
+    border-radius: 50%;
+    background: linear-gradient(130.3deg, #CBA054 -5.64%, #FFE381 104.06%);
+    margin-left: 4px !important;
+    margin-right: 4px !important;
+}
+.carousel-indicators {
+    position: relative !important;
+}
+.carousel-control-next .nsy-icon, .carousel-control-prev .nsy-icon {
+    width: 40px;
+    height: 40px;
+}
+.product-cover {
+    position: relative;
+}
+.product-cover img {
+    width: 100%;
+    border-radius: 4px;
+}
+.product-tour-title {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    margin: 0 auto;
+    transform: translateY(-50%);
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 33px;
+}
+.product-tour-title div {
+    color: white;
+}
+.product-tour-title .explore {
+    margin-top: 31px;
+    padding: 13px 36px;
+    border-radius: 4px;
+    border: 1px solid white;
+    display: inline-block;
+    font-size: 16px;
+}
+.page-product .product__item {
+    margin-bottom: 24px;
+}
+.page-product .product__image {
+    height: 120px;
+    overflow: hidden;
+}
+.page-product .product__content {
+    padding: 16px;
+}
+.page-product .product__content__title {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    margin-bottom: 5px;
+}
+.page-product .product__item .nsy-icon {
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+.page-product .product__content__rate {
+    margin-bottom: 7px;
+}
+.page-product .tour-info {
+    display: flex;
+    justify-content: space-between;
+}
+.page-product .tour-info .info-item {
+    font-size: 13px;
+}
+.product__item .product__image {
+    display: inline-block;
+}
+.plan-your-trip {
+    background-image: url('../images/app/trip-bg.png');
+}
+.plan-your-trip h3 {
+    font-size: 32px;
+    color: white;
+    font-family: Antonio;
+    letter-spacing: 0.04em;
+    font-weight: bold;
+    line-height: 46px;
+    margin-bottom: 10px;
+}
+.book-button {
+    color: var(--ink);
+    text-transform: uppercase;
+    background-color: white;
+    border-radius: 4px;
+    padding: 21px 64px;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+}
+.plan-your-trip .book-button {
+    margin-top: 36px;
+}
+
+
+@media all and (transform-3d), (-webkit-transform-3d) {
+  .carousel-multi .carousel-inner > .item {
+    transition: 500ms ease-in-out all;
+    backface-visibility: visible;
+    transform: none!important;
+  }
 }
 
 
