--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 :root {
     --yellow: #FFD058;
+    --golden: #EBB731;
     --green: #35BD7C;
     --red: #EF6161;
     --dark-blue: #1F4A89;
+    --dark-hr: #2E3572;
     --ink: #121747;
     --grey: #c4c4c4;
     --grey-2: #888888;
@@ -58,7 +60,7 @@
     font-style: italic;
 }
 
-body, html, * {
+body, html {
     font-family: Open Sans;
     color: #333333;
 }
@@ -73,6 +75,9 @@ a {
 }
 .text-green {
     color: var(--green);
+}
+.text-white {
+    color: white !important;
 }
 .weight-600 {
     font-weight: 600;
@@ -525,19 +530,129 @@ a {
     line-height: 46px;
     margin-bottom: 10px;
 }
-.book-button {
+.book-button.white-button {
     color: var(--ink);
     text-transform: uppercase;
     background-color: white;
     border-radius: 4px;
-    padding: 21px 64px;
+    padding: 11px 18px;
     display: inline-block;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 13px;
     line-height: 22px;
+}
+.quote-section .book-button button {
+    text-transform: uppercase;
 }
 .plan-your-trip .book-button {
     margin-top: 36px;
+}
+.travel-post__image {
+    border-radius: 4px;
+}
+.travel-post__text h5 {
+    color: var(--ink);
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.travel-post__text .content {
+    font-size: 14px;
+    color: var(--black);
+    line-height: 22px;
+}
+.view-more {
+    margin-top: 18px;
+}
+.view-more a, .view-more a:hover {
+    text-decoration: underline;
+    font-size: 13px;
+    line-height: 18px;
+    color: var(--ink);
+}
+.travel-post {
+    margin-top: 24px;
+}
+.travel-post .travel-post__text h5 {
+    font-size: 14px;
+}
+footer {
+    background-color: var(--ink);
+    padding-top: 64px;
+    padding-bottom: 20px;
+    color: white;
+}
+.footer-logo img {
+    height: 64px;
+    margin-bottom: 24px;
+}
+.footer-welcome {
+    color: white;
+    font-style: italic;
+    font-size: 14px;
+    margin-bottom: 16px;
+}
+.sns-icon {
+    display: inline-block;
+    margin-right: 24px;
+    margin-bottom: 16px;
+}
+.sns-icon img {
+    width: 40px;
+}
+.term a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 24px;
+}
+.term a:not(:first-child) {
+    margin-left: 24px;
+}
+.term a:hover {
+    color: white;
+    text-decoration: underline;
+}
+.footer-title {
+    color: var(--golden);
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Antonio;
+    line-height: 24px;
+    padding-bottom: 7px;
+    border-bottom: 1px solid var(--yellow);
+    height: 64px;
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 24px;
+}
+footer .link, footer .link:hover {
+    text-decoration: underline;
+    color: white;
+}
+.footer-form {
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto 100px;
+    grid-gap: 16px;
+    margin-top: 10px;
+}
+.footer-form input {
+    padding: 11px 18px;
+}
+.copyright {
+    border-top: 1px solid var(--dark-hr);
+    text-align: center;
+    margin-top: 64px;
+    padding-top: 19px;
+    font-size: 16px;
 }
 
 
